# h59

./: .gitignore  AGENT.md  PRIVACY.md  README.md  SECURITY.md  install.sh  pyproject.toml  report.md
dashboard/: .env.example  Makefile  README.md  docker-compose.yml  run.sh
dashboard/api/: Dockerfile  pyproject.toml
dashboard/api/src/h59_dashboard_api/: __init__.py  config.py  db.py  device_context.py  feature_store.py  insights.py  main.py  queries.py  schemas.py  time.py
dashboard/api/src/h59_dashboard_api/payloads/: __init__.py  common.py  debug.py  device_status.py  devices.py  health.py  metrics.py  quality.py  sleep.py  today.py
dashboard/dashboards/: h59_data_quality.json  h59_overview.json  h59_sleep_recovery.json
dashboard/sql/: dashboard_summary.sql  example_queries.sql  views.sql
dashboard/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
docs/research/: README.md  compatibility_mapping.md  device_protocol.md  health_metrics.md
docs/software/: analytics_feature_store.md  architecture.md  architecture_todo.md  cli.md  dashboard_requirements.md  database.md  visualisation_layer_architecture.md
src/h59_client/: __init__.py  actions.py  analytics.py  ble.py  cli.py  config.py  dashboard_report.py  date_utils.py  devices.py  protocol.py  report.py  (+2 more)
tests/: test_analytics.py  test_cli.py  test_dashboard_api.py  test_dashboard_assets.py  test_dashboard_report.py  test_devices.py  test_feature_store_api.py  test_init.py  test_protocol.py  test_storage.py  test_sync.py
tools/: render_dashboard_report.py
(+38 files in other folders)
